Add image to bruschetta.html

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>Tomato Bruschetta</h1>
+
+        <img src="./images/Bruschetta-2-1.jpeg" alt="Tomato bruschetti on white painted stone platter">
+        
     </body>
 </html>
