Add Description heading and paragraphs

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -10,5 +10,9 @@
 
         <img src="./images/Bruschetta-2-1.jpeg" alt="Tomato bruschetti on white painted stone platter">
         
+        <h2>Description</h2>
+        <p>Bruschetta is a classic Italian appetizer everyone loves. Learn how to make it with crunchy bread and a tasty garlicky topping of fresh tomatoes, olive oil, balsamic vinegar, and basil.</p>
+        <p>This recipe is quick and easy to make, and it's the perfect dish for a wonderful dinner with friends and family.</p>
+        
     </body>
 </html>
