Add unordered ingredients list

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -13,6 +13,17 @@
         <h2>Description</h2>
         <p>Bruschetta is a classic Italian appetizer everyone loves. Learn how to make it with crunchy bread and a tasty garlicky topping of fresh tomatoes, olive oil, balsamic vinegar, and basil.</p>
         <p>This recipe is quick and easy to make, and it's the perfect dish for a wonderful dinner with friends and family.</p>
-        
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>10 slices crusty bread</li>
+            <li>1/2 kg tomatoes</li>
+            <li>3 Tbsp extra virgin olive oil</li>
+            <li>2 Tbsp balsamic vinegar</li>
+            <li>2 cloves garlic</li>
+            <li>15 leaves fresh basil</li>
+            <li>1 tsp salt</li>
+            <li>1/4 tsp black pepper</li>
+        </ul>
     </body>
 </html>
