Add ordered steps list

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -25,5 +25,20 @@
             <li>1 tsp salt</li>
             <li>1/4 tsp black pepper</li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Rinse 1/2 kg tomatoes, dry them, then cut them into small dice.
+                You can discard half of their liquid if they are very watery.</li>
+            <li>To a mixing bowl, add the diced tomatoes, 3 tablespoons extra virgin olive oil, 2 tablespoons balsamic vinegar, 1 clove of grated or crushed garlic, 1 teaspoon salt, ¼ teaspoon pepper, and 15 leaves fresh basil (chopped).</li>
+            <li><p>Toss until well combined, then taste and just for salt.</p>
+                <p>Let mixture marinate at room temperature for about 10 - 15 minutes.</p></li>
+            <li><p>In the meantime, slice the bread into 10 to 12 half-inch thick slices (1.2 cm).</p>
+                <p>Arrange the bread on a baking sheet or grill rack and toast it in the oven with the broiler function until golden and crunchy.</p>
+                <p>You can turn the slices to broil them on both sides for extra crunchy bread.</p></li>
+            <li>You can turn the slices to broil them on both sides for extra crunchy bread.</li>
+            <li>Top each slice with one or two tablespoons of tomato mixture. Don't add too much of the liquid at first. You can sprinkle some on the slices rights before serving the bruschetta.</li>
+            <li>Serve on a platter or cutting board as an appetizer, snack, aperitivo, or crunchy and healthy dinner.</li>
+        </ol>
     </body>
 </html>
