--- a/recipes/caponata.html
+++ b/recipes/caponata.html
@@ -6,5 +6,9 @@
     </head>
 
     <body>
+        <h1>Caponata</h1>
+
+        <img src="../images/caponata-1-2.jpeg" alt="Caponata on toasted panne with fresh basil">
+
     </body>
 </html>
