Add description and ingredients

--- a/recipes/caponata.html
+++ b/recipes/caponata.html
@@ -10,5 +10,23 @@
 
         <img src="../images/caponata-1-2.jpeg" alt="Caponata on toasted panne with fresh basil">
 
+        <h2>Description</h2>
+        <p>Caponata one of our favorite vegan eggplant recipes. It's an Italian eggplant salad with a delicious sweet and sour flavor. We make it with oven-baked eggplant (instead of deep-fried) in less than 45 minutes.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 medium eggplants</li>
+            <li>1/2 kg roma/cherry tomatoese</li>
+            <li>1 large onion</li>
+            <li>2 stalks celery</li>
+            <li>3 Tbsp olive oil</li>
+            <li>1/2 cup pitted green olives</li>
+            <li>2 Tbsp capers</li>
+            <li>3 cracks black pepper</li>
+            <li>4 Tbsp vinegar</li>
+            <li>2 Tbsp sugar</li>
+            <li>10 leaves basil</li>
+            <li>2 Tbsp pine nuts</li>
+        </ul>
     </body>
 </html>
