Add Steps to file

--- a/recipes/caponata.html
+++ b/recipes/caponata.html
@@ -28,5 +28,18 @@
             <li>10 leaves basil</li>
             <li>2 Tbsp pine nuts</li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 360F (180C). Dice the eggplant. Add it to a baking tray lined with parchment paper. Season with about 1 tablespoon of olive oil, a pinch of salt and 3 twists of pepper. Bake for 30 minutes.</li>
+            <li>In the meantime, chop onion and celery and add them to a pan with 2 tablespoon of olive oil. Fry gently for 5 minutes. Add ⅓ cup of water if the pan is too dry.</li>
+            <li><p>If you use fresh tomatoes then cut them in small dice.</p>
+                <p>Add tomatoes to pan. Add ½ teaspoon of salt, olives, capers, and cook for 15 minutes, stirring occasionally, till the tomatoes are soft.</p>
+                <p>Note: Add ½ cup water if pan gets too dry. This depends on water content of tomatoes.</p></li>
+            <li>Add sugar and vinegar, stir, then taste the sauce and adjust for salt, sugar, or vinegar if necessary.</li>
+            <li><p>Add baked eggplants, fresh basil, stir, finish cooking for a couple of minutes, then turn the heat off, let rest for at least 15 minutes.</p>
+                <p>Serve as a starter, side dish, or main dish on pasta. You can top the caponata with toasted pine nuts and more fresh basil.</p></li>
+            <li>Caponata can be prepared in advance, stored in the fridge for up to 5 days, and served at room temperature or warm.</li>
+        </ol>
     </body>
 </html>
