Add image to file

--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+        <h1>Aglio e Olio</h1>
+
+        <img src="../images/Aglio-olio-1-1.jpeg">
         
     </body>
 </html>
