Add unordered Ingredients list

--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -14,6 +14,21 @@
         <p>Spaghetti aglio e olio is a classic pasta dish from Italy where the spaghetti is tossed in a simple and tasty garlic, chillis, parsley, and olive oil sauce.</p>
         <p>We'll show you how to make this recipe to perfection in under 15 minutes and give you plenty of ideas on how to add your favorite veggies to turn it into a delicious family dinner.</p>
 
+        <h3>Ingredients</h3>
+        <h4>Aglio e Olio Sauce</h4>
+        <ul>
+            <li>1/3 cup extra virgin olive oil</li>
+            <li>3 cloves garlic</li>
+            <li>1 - 2 tsp red pepper flakes</li>
+            <li>2 handfuls flat-leaf parsley</li>
+            <li>1 pinch salt</li>
+        </ul>
+        <h4>Pasta</h4>
+        <ul>
+            <li>1/2 kg pasta</li>
+            <li>3 l water</li>
+            <li>1 1/2 Tbsp salt</li>
+        </ul>
         
     </body>
 </html>
