Add ordered Steps list

--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -29,6 +29,29 @@
             <li>3 l water</li>
             <li>1 1/2 Tbsp salt</li>
         </ul>
-        
+
+        <h3>Steps</h3>
+        <h4>Make the aglio e olio sauce</h4>
+        <ol>
+            <li>Finely chop 3 cloves garlic, 2 handfuls flat-leaf parsley.</li>
+            <li><p>Add ⅓ cup extra virgin olive oil to a large skillet.</p>
+                <p>Set the heat to low, then when the oil is warm, add the finely chopped garlic and chili.</p>
+                <p>Fry in the oil for approximately 30 seconds, then turn the heat off and let fry gently with the pan's residual heat.</p>
+                <p>Set aside and wait for the pasta to cook.</p>
+                <p>Note: the garlic should not brown or burn. Burnt garlic tastes bitter. If this happens, we recommend starting over. If the pan gets too hot, take it off the heat and tilt it to gather the oil and the garlic on one side.</p></li>
+        </ol>
+        <h4>Boil the pasta</h4>
+        <ol>
+            <li><p>Bring 3 l water to a boil in a large pot, add 1½ Tbsp salt, then add 1/2 kg spaghetti.</p>
+                <p>Cook the pasta in boiling water per package instructions minus 1 minute as you want to pasta very al dente (al dente means slightly undercooked). Stir the pasta once or twice so it doesn't stick to the bottom of the pot.</p>
+                <p>When the pasta is cooked al dente, reserve a cup of pasta water and drain the pasta.</p></li>
+            <li><p>When the pasta is almost cooked, warm the aglio e olio sauce again until the garlic fries, then add the finely chopped parsley.</p>
+                <p>Move the pan around to disperse the parsley in the oil, and fry it for 15 to 30 seconds.</p></li>
+        </ol>
+        <h4>Toss and serve</h4>
+        <ol>
+            <li>Add the pasta to the pan and toss on medium-heat with the garlic and oil sauce, add a ladleful of reserved pasta-cooking water and 1 pinch salt, and finish cooking the pasta for another minute while gently moving it around.</li>
+            <li>When there's no more liquid in the pan, and the pasta is fully coated in the sauce, you can serve it.</li>
+        </ol>
     </body>
 </html>
