Add link to new file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/bruschetta.html">Tomato Bruschetta</a>
+        <uL>
+            <li><a href="recipes/bruschetta.html">Tomato Bruschetta</a></li>
+            <li><a href="recipes/caponata.html">Caponata</a></li>
+            <li><a href="recipes/aglio-e-olio.html">Aglio e Olio</a></li>
+        </uL>
     </body>
 </html>
