Fix image path error

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Tomato Bruschetta</h1>
 
-        <img src="./images/Bruschetta-2-1.jpeg" alt="Tomato bruschetti on white painted stone platter">
+        <img src="../images/Bruschetta-2-1.jpeg" alt="Tomato bruschetti on white painted stone platter">
         
         <h2>Description</h2>
         <p>Bruschetta is a classic Italian appetizer everyone loves. Learn how to make it with crunchy bread and a tasty garlicky topping of fresh tomatoes, olive oil, balsamic vinegar, and basil.</p>
